@@ -19,8 +19,7 @@
   --enable-vbe \
   --enable-mmx \
   --enable-fpu \
-  --enable-sse=2 \
-  --enable-pni \
+  --enable-sse=3 \
   --enable-vme \
   --enable-sep \
   --enable-3dnow \
